added xml based config

--- a/src/main/resources/templates/chuck.html
+++ b/src/main/resources/templates/chuck.html
@@ -12,6 +12,13 @@
 
 <body>
 
-<h1 th:text="${joke}"></h1>
+
+
+<div >
+
+    <h1> Chuck Norris Quote</h1>
+
+    <p th:text="${joke}"></p>
+</div>
 
 </body>
